2001-08-01  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-link-impl-desktop.c: use 
	desktop_file_get_locale_string() instead of
	desktop_file_get_string() to get the names from the desktop files.

2001-08-01  Havoc Pennington  <hp@redhat.com>

	* eazel-logos/default.xml: hang on - is this the default theme for
	nautilus, or is the below file the default theme for nautilus? 
	anyway, make same change to remove title colors.

	* icons/default.xml: don't hardcode the title, title info, and
	shadow colors; this prevented the auto-color-selection stuff
	in nautilus-sidebar-title.c from working properly.
	And the hardcoded values were the same thing the autoselector
	would have chosen anyhow.

	* libnautilus-private/nautilus-directory-metafile.c
	(get_metafile): print error and exit if we fail to open the
	metafile factory; somewhat cleaner than segfaulting.

2001-08-01  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (lay_down_icons_tblr):
	64bit clean. Use sizeof (int *), not sizeof (int). 

Wed Aug  1 04:58:35 2001  Jonathan Blandford  <jrb@redhat.com>

	* libnautilus-private/nautilus-link.c: Fix a crash when some files
	could return NULL as a mime-type.

	* src/file-manager/fm-icon-view.c (get_icon_text_callback):
	Disable additional_text for .desktop files.

2001-07-31  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-link-impl-desktop.c (nautilus_link_impl_desktop_get_link_uri_from_desktop):
	Handle FSType desktop files here to. To allow unmounts.

2001-07-31  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_name):
	get_text, not get_additional_text, for .directory files. fixes
	sidebar names hopefully.

	* libnautilus-private/nautilus-volume-monitor.c (get_mount_list):
	/proc/mounts mtime never changes, so stat /etc/mtab.

2001-07-30  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c: 